Fix popover transition flickering on examples in iOS

--- a/website/style.scss
+++ b/website/style.scss
@@ -191,7 +191,7 @@ footer {
   &_preview {
     margin: 24px;
     position: relative;
-
+    transform: translate(0);
   }
 
   @media screen and (max-width: 480px) {
